test/selfTest/MYtest_04.out
Error type 15 at Line 6: redefine the same structure type "Book".
Error type 9 at Line 19: the function "printBook" is not applicable for arguments.